[gd_scene load_steps=6 format=1]

[ext_resource path="res://contractors.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=3]
[ext_resource path="res://lower.png" type="Texture" id=4]
[ext_resource path="res://raise.png" type="Texture" id=5]

[node name="contractor" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -0.029665, 0.33674 )
transform/scale = Vector2( 0.0498035, 0.0916558 )
texture = ExtResource( 2 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -27.0
margin/right = 119.0
margin/bottom = 25.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sabatoge"
visible_characters = -1

[node name="sabatoge_goal_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -27.0
margin/right = 682.0
margin/bottom = 66.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Current sabatoge goal."
visible_characters = -1

[node name="sabatoge_fund" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -14.0
margin/top = -11.0
margin/right = 243.0
margin/bottom = 41.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sabatoge Fund:"
visible_characters = -1

[node name="sabatoge_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = -11.0
margin/right = 266.0
margin/bottom = 41.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="daily_sabatoge" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -1.0
margin/right = 413.0
margin/bottom = 51.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Daily Sabatoge Spending:"
visible_characters = -1

[node name="sabatoge_lower" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = -1.0
margin/right = 14.0
margin/bottom = 3.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[node name="daily_sabatoge_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -1.0
margin/right = 128.0
margin/bottom = 46.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="sabatoge_raise" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = -1.0
margin/right = 28.0
margin/bottom = 3.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[node name="days_left" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = 9.0
margin/right = 442.0
margin/bottom = 61.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Days Left Until Sabatoge:"
visible_characters = -1

[node name="days_left_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 9.0
margin/right = 266.0
margin/bottom = 61.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[connection signal="button_down" from="sabatoge_lower" to="." method="_on_sabatoge_lower_button_down"]

[connection signal="button_down" from="sabatoge_raise" to="." method="_on_sabatoge_raise_button_down"]


